# Sounddelay-and-Level-Calculator

./: .gitignore  CMakeLists.txt  README.md  build-slint-yml  build.sh
.github/workflows/: build-slint.yml  build_app.yml
cppfiles/Controller/: CMakeLists.txt  controller.h  main.cpp
cppfiles/Core/: CoreCalculations.h
icons/: icon.icns
old_cpp_files/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Controller/: CMakeLists.txt  controller.cpp  controller.h  main.cpp
src/Core/: CMakeLists.txt  CoreCalculations.cpp  SdalcalCore.cpp  SdalcalCore.h
src/UI/: AICode.qml  AICode2.qml  CMakeLists.txt  Main.qml  firstUI.qml
src/ui/: parameter-tile.slint
tests/: CMakeLists.txt  test_CoreCalculations.cpp
ui/: app-window.slint  parameter-tile.slint
